--- a/src/GruntTest/bower.json
+++ b/src/GruntTest/bower.json
@@ -1,15 +1,51 @@
 {
-    "name": "BlsTable",
+    "name": "BlsComponents",
     "private": true,
+    "description": "All js bls's Components",
+    "version": "0.0.1",
     "dependencies": {
         "angular": "^1.4.5",
-        "angular-bootstrap": "^0.13.3",
         "angular-local-storage": "^0.2.2",
+        "Font-Awesome": "^4.4.0",
+        "jquery": "^2.1.4"
+    },
+    "devDependencies": {
+        "angular-bootstrap": "^0.13.3",
         "angular-animate": "^1.4.5",
         "angular-route": "^1.4.5",
         "angular-sanitize": "^1.4.5",
-        "bootstrap": "^3.3.5",
-        "Font-Awesome": "^4.4.0",
-        "jquery": "^2.1.4"
-    }
+        "bootstrap": "^3.3.5"
+    },
+    "keywords": [
+        "grid",
+        "angular",
+        "Table",
+        "splitter page"
+    ],
+    "authors": [
+        "Heni Fazzani <heni.fazzani@businessline.fr>"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Fazzani/blsTable"
+    },
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "wwwroot",
+        ".json",
+        ".ini",
+        ".cs",
+        ".html",
+        ".bowerrc",
+        ".gitignore",
+        ".jshintignore",
+        ".jshintrc",
+        "bower.json",
+        "gruntfile.js",
+        "package.json",
+        "README.md"
+    ]
 }
