--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -1,32 +1,34 @@
 {
-    "name": "BlsTable",
-    "description": "This to user blsTable by angular.",
-    "version": "0.0.1",
-    "dependencies": {
-        "express": "4.11.0"
-    },
-    "scripts": {
-        "start": "node Server.js"
-    },
-    "main": "Server.js",
-    "keywords": [
-        "nodejs",
-        "blsTable",
-        "Angularjs",
-        "Angular",
-        "heroku"
-    ],
-    "author": "Fazzani Heni",
-    "license": "MIT",
-    "private": true,
-    "devDependencies": {
-        "grunt": "0.4.5",
-        "grunt-contrib-clean": "0.6.0",
-        "grunt-contrib-jshint": "0.11.0",
-        "grunt-contrib-concat": "0.5.1",
-        "grunt-contrib-uglify": "0.8.0",
-        "grunt-contrib-watch": "0.6.1",
-        "json-server": "^0.7.25",
-        "grunt-shell": "^1.1.2"
-    }
+  "name": "BlsTable",
+  "description": "This to user blsTable by angular.",
+  "version": "0.0.3",
+  "dependencies": {
+    "express": "4.11.0"
+  },
+  "scripts": {
+    "start": "node Server.js"
+  },
+  "main": "Server.js",
+  "keywords": [
+    "nodejs",
+    "blsTable",
+    "Angularjs",
+    "Angular",
+    "heroku"
+  ],
+  "author": "Fazzani Heni",
+  "license": "MIT",
+  "private": true,
+  "devDependencies": {
+    "grunt": "0.4.5",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-jshint": "0.11.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-uglify": "0.8.0",
+    "grunt-contrib-watch": "0.6.1",
+    "json-server": "^0.7.25",
+    "grunt-shell": "^1.1.2",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-s3": "^0.2.0-alpha.3"
+  }
 }
