--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -30,6 +30,7 @@
     "grunt-shell": "^1.1.2",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-s3": "^0.2.0-alpha.3",
-    "grunt-bump": "^0.5.0"
+    "grunt-bump": "^0.5.0",
+    "grunt-banner": "^0.5.0"
   }
 }
