--- a/src/GruntTest/bower.json
+++ b/src/GruntTest/bower.json
@@ -16,7 +16,8 @@
         "angular-route": "^1.4.5",
         "angular-sanitize": "^1.4.5",
         "bootstrap": "^3.3.5",
-        "jquery-ui": "^1.11.4"
+        "jquery-ui": "^1.11.4",
+        "angular-ui-router": "^0.2.15"
     },
     "keywords": [
         "grid",
