--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -3,7 +3,8 @@
   "description": "Differents bls components.",
   "version": "0.0.14",
   "dependencies": {
-    "express": "4.11.0"
+    "express": "4.11.0",
+    "grunt-contrib-uglify": "^0.8.0"
   },
   "scripts": {
     "start": "node Server.js"
@@ -27,7 +28,7 @@
     "grunt-contrib-uglify": "0.8.0",
     "grunt-contrib-watch": "0.6.1",
     "json-server": "^0.7.25",
-    "grunt-shell": "^1.1.2",
+    "grunt-shell": "1.1.2",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-s3": "^0.2.0-alpha.3",
     "grunt-bump": "^0.5.0",
