--- a/src/GruntTest/bower.json
+++ b/src/GruntTest/bower.json
@@ -17,7 +17,7 @@
         "angular-sanitize": "^1.4.5",
         "bootstrap": "^3.3.5",
         "jquery-ui": "^1.11.4",
-        "angular-ui-router": "0.2.15"
+        "angular-ui-router": "^0.2.15"
     },
     "keywords": [
         "grid",
