--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BlsTable",
   "description": "Differents bls components.",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "dependencies": {
     "express": "4.11.0",
     "grunt-contrib-uglify": "^0.8.0"
@@ -32,6 +32,7 @@
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-s3": "^0.2.0-alpha.3",
     "grunt-bump": "^0.5.0",
-    "grunt-remove-logging": "^0.2.0"
+    "grunt-remove-logging": "^0.2.0",
+    "grunt-contrib-copy": "0.8.1"
   }
 }
