--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -33,6 +33,7 @@
     "grunt-s3": "^0.2.0-alpha.3",
     "grunt-bump": "^0.5.0",
     "grunt-remove-logging": "^0.2.0",
-    "grunt-contrib-copy": "0.8.1"
+    "grunt-contrib-copy": "0.8.1",
+    "grunt-ngdocs": "0.2.9"
   }
 }
