--- a/src/GruntTest/wwwroot/iisnode.yml
+++ b/src/GruntTest/wwwroot/iisnode.yml
@@ -1,1 +1,1 @@
-﻿nodeProcessCommandLine: "D:\home\site\wwwroot\bin\node.exe"
+﻿nodeProcessCommandLine: "C:\Users\Heni\Documents\Visual Studio 2015\Projects\BlsTable\src\GruntTest\wwwroot\bin\node.exe"
