--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -34,6 +34,7 @@
     "grunt-bump": "^0.5.0",
     "grunt-remove-logging": "^0.2.0",
     "grunt-contrib-copy": "0.8.1",
-    "grunt-ngdocs": "0.2.9"
+    "grunt-ngdocs": "0.2.9",
+    "azure-cli": "0.9.9"
   }
 }
