--- a/src/GruntTest/project.json
+++ b/src/GruntTest/project.json
@@ -3,9 +3,17 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    
+    "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
+        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-beta4"
   },
-
+  "scripts": {
+        "postrestore": [
+            "npm install",
+            "grunt build"
+        ]
+    },
   "commands": {
     "web": "Microsoft.AspNet.Hosting --config hosting.ini"
   },
