--- a/src/GruntTest/project.json
+++ b/src/GruntTest/project.json
@@ -11,6 +11,7 @@
   "scripts": {
         "postrestore": [
             "npm install",
+            "bower install",
             "grunt build"
         ]
     },
