--- a/src/GruntTest/package.json
+++ b/src/GruntTest/package.json
@@ -3,13 +3,12 @@
   "description": "Differents bls components.",
   "version": "0.0.54",
   "dependencies": {
-    "express": "4.11.0",
-    "grunt-contrib-uglify": "^0.8.0"
+    "express": "4.11.0"
   },
   "scripts": {
-    "start": "node Server.js"
+    "start": "node app.js"
   },
-  "main": "Server.js",
+  "main": "app.js",
   "keywords": [
     "nodejs",
     "blsTable",
